feat: update swagger API docs
